--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set(top_travel_cities)\n"
    ]
   },
   {
