--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -485,22 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_of_repeats = len(unique_countries)\n",
+    "num_of_repeats = len\n",
     "num_of_repeats # 3"
    ]
   },
